After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755730 - Focus message list after start in the Mail view
Focus message list after start in the Mail view
Status: RESOLVED FIXED
Product: evolution
Classification: Applications
Component: general
3.18.x (obsolete)
Other Linux
: Normal minor
: ---
Assigned To: Evolution Shell Maintainers Team
Evolution QA team
: 756501 757561 758354 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-09-28 13:00 UTC by Berend De Schouwer
Modified: 2019-06-27 10:41 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Berend De Schouwer 2015-09-28 13:00:53 UTC
In the main shell, the focus seems to always be on the search bar.

'Show [all/unread] search... in [current]'

This means that the down/up and delete keys don't go to the next message, or don't delete the current message.  Down/up instead swaps between all/unread.

right-click->delete does delete the message.


Confirmed on Wayland, unknown on X11
Was working in 3.16.


Sometimes focus is on the message list, but clicking on a message in the message list does not focus the message list.


This means most quick keys don't work as expected.
Comment 1 Milan Crha 2015-09-29 12:28:41 UTC
Thanks for a bug report. Do you mean that this worked in Wayland using evolution 3.16.x, but doesn't work using evolution 3.18.x? More importantly, using the same gtk3 versions (gtk+ 3.16.x works, 3.18.x doesn't work)?

All this focus stuff is handled by the gtk+ library, I'm not aware of any changes in the evolution in this regard between 3.16.x and 3.18.x, especially not with the search bar, thus I move this to gtk+.

I tried to reproduce this using:
   gtk3-3.17.9-1
   evolution-3.17.92-1
   libwayland-client-1.9.0-1
   libwayland-server-1.9.0-1
and I can focus the message list using the mouse, then navigate through it using keyboard. This is a virtual machine.
Comment 2 Berend De Schouwer 2015-09-29 15:58:14 UTC
I meant: it worked under X11 using 3.16.x, it did not work using Wayland using 3.18.x.

With "it worked under X11 using 3.16.x" I mean: I never noticed the 'delete' key not working.  I usually use the keyboard key to delete messages, so I'm sure I would have noticed.

I didn't test 3.16.x under Wayland because I had too many bugs and crashes to keep Wayland up for long enough to test Evolution.

I've done some more testing, and I can duplicate it using 3.18.x under X11, but not consistently.

Here's what I can duplicate under X11:

1. Select a folder (using mouse) (SPAM is a good choice for this :)
2. Select a message (using mouse)
3. Hit delete (nothing)
4. Hit up/down (the message moves up/down)
5. Hit delete (message deleted) (next message selected)
6. Hit delete again (beeps) (Show: toolbar is selected)

Sometimes:

1. Select a folder (using mouse) (SPAM is a good choice for this :)
2. Select a message (using mouse)
3. Hit delete (nothing)
4. Hit up/down (Show: toolbar is selected)
Comment 3 Matthias Clasen 2015-09-30 22:14:41 UTC
this is not wayland-specific. I've seen the same issue in evolution under X
Comment 4 Milan Crha 2015-10-02 05:29:40 UTC
(In reply to Matthias Clasen from comment #3)
> this is not wayland-specific. I've seen the same issue in evolution under X

Okay, still I cannot reproduce it with gtk3-3.16.6-1, so it still might be a gtk+ issue, because evolution didn't change anything focus-related for a long time.
Comment 5 Milan Crha 2015-10-14 11:59:37 UTC
*** Bug 756501 has been marked as a duplicate of this bug. ***
Comment 6 Milan Crha 2015-10-14 12:40:20 UTC
Maybe not fully related to this (I re-read the above comments only after I committed the changes), I made the message list focused after open, thus the things like Delete, arrows and such work in the message list from the start, not only after a user either clicks into the message list or tabs into it. That's done with the below commits.

The issue of a lost focus after a mouse click is not addressed yet, I still lack of a reproducer which would reproduce it on my side (I tried comment #2 with the On This Computer/Inbox and Drafts folders). I'm not closing this bug yet.

Created commit 371ce12 in evo master (3.19.1+)
Created commit d07d0a2 in evo gnome-3-18 (3.18.2+)
Comment 7 Milan Crha 2015-11-03 09:28:46 UTC
This might be a regression/side-effect of the change for bug #241050. I noticed that I'm still able to reproduce this when I click into the "empty" part of the message list (it's when there are no enough messages to cover whole height of the message list). I fixed it with:

Created commit 2b7bc70 in evo master (3.19.2+)
Created commit 298d0fe in evo gnome-3-18 (3.18.2+)
Comment 8 André Klapper 2015-11-10 16:18:34 UTC
I still see this problem in 3.18.2 but I need to find better steps to repro. Assumption: Has to do with drag'n'drop of messages to another folder.
Comment 9 Milan Crha 2015-11-11 10:07:24 UTC
(In reply to André Klapper from comment #8)
> Assumption: Has to do with drag'n'drop of messages to another folder.

I found out that this is different issue, it is cause by a change in gtk+, within bug #749737.
Comment 10 Milan Crha 2015-11-11 10:57:00 UTC
(In reply to Milan Crha from comment #9)
> (In reply to André Klapper from comment #8)
> > Assumption: Has to do with drag'n'drop of messages to another folder.
> 
> I found out that this is different issue, it is cause by a change in gtk+,
> within bug #749737.

I changed the approach done in the bug #241050, more info at bug #241050 comment #10. The issue with drag&drop had been fixed with the following commit:

Created commit 46c1425 in evo master (3.19.2+)
Created commit be6b057 in evo gnome-3-18 (3.18.3+)
Comment 11 Milan Crha 2015-11-20 07:28:44 UTC
*** Bug 758354 has been marked as a duplicate of this bug. ***
Comment 12 Milan Crha 2015-11-26 08:27:35 UTC
*** Bug 757561 has been marked as a duplicate of this bug. ***
Comment 13 Milan Crha 2019-06-27 10:41:27 UTC
The change from comment #6 introduces a runtime warning when evolution is started in the calendar view (evolution -c calendar) and there's selected for example the Month view, when pressing basically any key (some of them being Arrow-Down/-Up). It showed on console:

> Gtk-CRITICAL **: 12:28:02.989: gtk_widget_event: assertion
> 'WIDGET_REALIZED_FOR_EVENT (widget, event)' failed

It was due to the message list being focused, even it was not visible. I changed it with the below commits and made it more generic, thus right now each view selects its content part similarly like after executing search. That causes to not focus the buttons on the tool bar.

Created commit 4978623f5d in evo master (3.33.4+)
Created commit f17a9f4cd9 in evo gnome-3-32 (3.32.4+)