Bug 755730 - Focus message list after start in the Mail view ][

Closes https://bugzilla.gnome.org/show_bug.cgi?id=755730#c13